# ChangeLog for app-misc/when
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/when/ChangeLog,v 1.47 2011/03/05 00:00:07 xmw Exp $

  04 Mar 2011; Michael Weber <xmw@gentoo.org> when-1.1.23.ebuild:
  ppc/sparc stable (bug 357069)

  04 Mar 2011; Markos Chandras <hwoarang@gentoo.org> when-1.1.23.ebuild:
  Stable on amd64 wrt bug #357069

*when-1.1.27 (02 Mar 2011)

  02 Mar 2011; Tim Harder <radhermit@gentoo.org> +when-1.1.27.ebuild:
  Version bump and update to EAPI 4.

  12 Feb 2011; Raúl Porcel <armin76@gentoo.org> when-1.1.22.ebuild:
  sparc stable wrt #350709

  11 Jan 2011; Markus Meier <maekke@gentoo.org> when-1.1.22.ebuild:
  x86 stable, bug #350709

  07 Jan 2011; Brent Baude <ranger@gentoo.org> when-1.1.22.ebuild:
  Marking when-1.1.22 ppc for bug 350709

  05 Jan 2011; Markos Chandras <hwoarang@gentoo.org> when-1.1.22.ebuild:
  Stable on amd64 wrt bug #350709

*when-1.1.23 (05 Jan 2011)

  05 Jan 2011; Justin Lecher <jlec@gentoo.org> -when-1.1.20.ebuild,
  -when-1.1.21.ebuild, +when-1.1.23.ebuild:
  Some Clean up, Version Bump

*when-1.1.22 (08 Nov 2010)

  08 Nov 2010; Tim Harder <radhermit@gentoo.org> +when-1.1.22.ebuild:
  Version bump. Don't inherit unused eclasses.

*when-1.1.21 (04 Oct 2010)

  04 Oct 2010; Justin Lecher <jlec@gentoo.org> +when-1.1.21.ebuild:
  Version Bump, 339636

*when-1.1.20 (23 Jul 2010)

  23 Jul 2010; Jeremy Olexa <darkside@gentoo.org> -when-1.1.16-r1.ebuild,
  +when-1.1.20.ebuild:
  Version bump, thanks to Tim Harder in bug 329347

*when-1.1.16-r1 (15 Jun 2010)

  15 Jun 2010; Justin Lecher <jlec@gentoo.org> +when-1.1.16-r1.ebuild,
  +files/when-prefix.patch:
  QA, imported prefix changes

  01 Aug 2009; Jeremy Olexa <darkside@gentoo.org> -when-1.1.11.ebuild,
  -when-1.1.13.ebuild:
  remove old

  30 May 2009; nixnut <nixnut@gentoo.org> when-1.1.16.ebuild:
  ppc stable #271108

  27 May 2009; Ferris McCormick <fmccor@gentoo.org> when-1.1.16.ebuild: