@@ -1,11 +1,27 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX when-prefix.patch 294 RMD160 4cefc0cc1b6bb35051c8af26ca4f40010994b5c5 SHA1 988e4a5a0df17f7e5f5f9782d5c63efe0ed97902 SHA256 5e12e60d1e443f39184cc9b99acf6d606683f21ddd53874669415728626b3462
 DIST when-1.1.16.tar.gz 43929 RMD160 a1fdc91c0e2b5a564978c5038ce7d46fa02ff8a9 SHA1 eb32d5630d3aa794efc52932ebcb50342e324160 SHA256 814af15cd86fe83c26a5be4a703b896ab2d9b8af92655f9e0ba6229892fb1265
 DIST when-1.1.22.tar.gz 47096 RMD160 108174a001fa4e03cd10c67069d800d261a09554 SHA1 2475ed38ed2f51b44762e9d6e3b16bf007a18552 SHA256 ceba61724a1685529319fe379e0c14a9226f3bf4f60b499169fe11bf3eaec71d
 DIST when-1.1.23.tar.gz 47097 RMD160 41690e590e4126a3a878ac669f8035a598b70563 SHA1 032ec497b072548d72965f53cb642a76b94cbd43 SHA256 43b25dc691785316828e8e9e5ef49e9030da2dbb7a58d094f3c8ce6f53ddd0a3
 DIST when-1.1.27.tar.gz 48842 RMD160 5bee259f3f8c4fb6ba4afd446a403cffb0743944 SHA1 734a8f047d34d050190e4f07f99fc358cfab3a96 SHA256 6ff407e660b04b41de517e5b618498450480edd385807fc3aab027f014aa4735
+DIST when-1.1.28.tar.gz 50153 RMD160 0245e6d8bd8beacb7f75d72b4f691b0eb8c516a6 SHA1 82650d69154b1098eee9ea3702ac96866b0dcbe9 SHA256 16f7a00a6133b41bb8e05378e4be15514ad474ba9284d4acd7ab5f6da1173681
 EBUILD when-1.1.16.ebuild 949 RMD160 a69b878979178d1249d17229e29f0cd35b277a99 SHA1 1f432978b1c236448b7f911d5308552bdb04bf54 SHA256 cf77d842f05979c6f5e7776db21daf30b21c91383f5bdd41077df84ac87bb601
 EBUILD when-1.1.22.ebuild 1075 RMD160 243549bef4a273bf22f90e26c1b40f3e99f11b5c SHA1 6650a7c9e1b1a965359adf5bbd484d9a33aa3b8c SHA256 9b8c40501f8e5efa33439aea9ce70492ee0813621a6ca6283d3493ec923877df
 EBUILD when-1.1.23.ebuild 1079 RMD160 7d87e7f08e489ee9324cd111cf3ae3b06db43641 SHA1 894a143ca549b795ac9b6d0cfb504a5a4693b3de SHA256 5eaa51351efca84821b970ad736cac100c125e063f417f29df0aa728be8d3af3
 EBUILD when-1.1.27.ebuild 1003 RMD160 7c2fc22183522513fe326eed74ee7e09bc63a35b SHA1 dfc5f7042a993fa801f5c5ce78e96e2a4d0cd3ae SHA256 f8e39bc50a60a1c3ef7540697e214e115af1615e6b586382489b0fc8c67e4b3b
-MISC ChangeLog 5733 RMD160 4607a690378c0e5e0d3aa9af53e019bb6c8fbdf0 SHA1 fe87579f5728c71d60fcc8ea64b931d176e5f710 SHA256 07dc3606ce8e8ff7ec30e7d586894601abc7ee2f664b31d7e0a6fe9656f6ec92
+EBUILD when-1.1.28.ebuild 1003 RMD160 8f461ba0ef87178d5466b16c86bd013f7bb1eb65 SHA1 00109e87c3d6df0c9004a6d37fece53ee2bac2ee SHA256 11bb30d1b4bd61b9a1495e46c0e0607f4bab37bd607fc525a18d5e383769781f
+MISC ChangeLog 5854 RMD160 c1309f5e39ac0d2b18daed6697646f130b182225 SHA1 f65a9901e3fb80d4dd638a068e5ead828bb40ffc SHA256 e5896c96b338d0f76f58b2215d02749536ed5e5aa7e7d4e74077db392023caa5
 MISC metadata.xml 165 RMD160 c4557a3518a065b077539be5a0f20e4735fc2141 SHA1 1831705b1eb97b63968fc9eef31aa904a69a854a SHA256 75ca85c472d4181ae0de529c83826baaebe75d9e750ee6621758b5096bceffcd
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iQEcBAEBAgAGBQJNfXtFAAoJEEqz6FtPBkyj6/MH/13gc2JJu1RHM71jbEjRmMMp
+KT2mGyx4tDwcmMCEahlERl6GYEY74BixTd172zi9pKdknEFRQzW3nnTkHNajJjfa
+Dl52y3FexsWHzfGSGefs0Ti3Er4ExoTqGyFc5RPMFCXRBSCmXuAu5gQfqfa7pOI9
+x9aXPULpz0pk4qKEoQvYMMP7ziqhz/LGbeQqgrJu9kjZNWla28p4ejWAWokBVfI5
+HdXebaqBIRtEd+HI9JoPNBEwK5ttRqZuO7LcHwmO3iF2WCzcp6hbscX5+Sbx3hjd
+9lbj8qnswCTniGZoJAU5oy0o96mGtkpQ0KCzgzbVL9tz/QhI720UIsEq/OGD/ks=
+=pWYC
+-----END PGP SIGNATURE-----
