@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/when
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/when/ChangeLog,v 1.47 2011/03/05 00:00:07 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/when/ChangeLog,v 1.48 2011/03/14 02:19:34 radhermit Exp $
+
+*when-1.1.28 (14 Mar 2011)
+
+  14 Mar 2011; Tim Harder <radhermit@gentoo.org> +when-1.1.28.ebuild:
+  Version bump.
 
   04 Mar 2011; Michael Weber <xmw@gentoo.org> when-1.1.23.ebuild:
   ppc/sparc stable (bug 357069)
